[gd_scene load_steps=21 format=2]

[ext_resource path="res://Scenes/TurretRay.gd" type="Script" id=1]
[ext_resource path="res://Scripts/Collided.gd" type="Script" id=2]
[ext_resource path="res://Graphics/Ships/ship_003.tex" type="Texture" id=3]
[ext_resource path="res://Graphics/UI/txt_prg_under.tex" type="Texture" id=4]
[ext_resource path="res://Graphics/UI/txt_prg_progress.tex" type="Texture" id=5]
[ext_resource path="res://Scenes/RigidBody2D.gd" type="Script" id=6]
[ext_resource path="res://Raw Graphics/Projectiles/bullet_008.png" type="Texture" id=7]
[ext_resource path="res://Scripts/EnemyLaser.gd" type="Script" id=8]
[ext_resource path="res://Graphics/Projectiles/bullet_004.tex" type="Texture" id=9]
[ext_resource path="res://Position2DArea2D.gd" type="Script" id=10]

[sub_resource type="GDScript" id=1]

script/source = "extends Area2D


var hovering = false
var clicked = false
var locked = false
var toggled = 0
var lockToggle = 0
var menuToggle = 0

var pointValue = 10
var health = 3
var damage = .02
var fireRate = 1
var fireRateStatic = 1
var fireRateDelta = .001

var rayCastExceptions = []

func _ready():
	connect(\"mouse_entered\", get_node(\"/root/Main\"), \"_on_Area2D_mouse_enter\")
	connect(\"mouse_exited\", get_node(\"/root/Main\"), \"_on_Area2D_mouse_exit\")
	set_process(true)
	set_physics_process(true)
	getallnodes(self)

func getallnodes(node):
	for N in node.get_children():
		if N.get_child_count() > 0:
			rayCastExceptions.append(N)
			getallnodes(N)
		else:
			# Do something
			rayCastExceptions.append(N)
	rayCastExceptions.append(self)
	#print(\"exceptions\")
	#print(rayCastExceptions)

func _physics_process(delta):
	var space_state = self.get_parent().get_world_2d().direct_space_state
	# use global coordinates, not local to node
	#print (rayCastExceptions)
	#print(self.get_children())
	var result = space_state.intersect_ray(self.global_position, self.get_node(\"Position2DArea2D/Position2D\").global_position, rayCastExceptions, self.collision_mask)
	#print(self.get_node(\"Position2DArea2D/Position2D\").global_position)
	#print(self.global_position)
	if result.size() > 1:
		for object in result:
			#if colliding with defender move the point to the defender
			if result.collider.get_parent().get_parent().get_name() == \"Defender\":
				#tell turret node that we are colliding with defender so it can draw the line accordingly
				self.get_node(\"Turret\").collidingWithDefender = true
				self.get_node(\"Position2DArea2D\").global_position = result.position
			elif result.collider.get_parent().get_parent().get_name() == \"Attacker\":
				result.collider.collided(damage)

#called every frame
func _process(delta):
	if hovering:
		#if locked let parent node know
		if locked:
			get_node(\"/root/Main\").cursorState = \"locked\"

		if Input.is_action_pressed(\"middle_click\"):
			if lockToggle < 1:
				if locked:
					locked = false
					#tell parent to set cursor state
					self.get_node(\"/root/Main\").cursorState = \"hovering\"
				else:
					locked = true
					#tell parent to set cursor state
					self.get_node(\"/root/Main\").cursorState = \"locked\"
				lockToggle += 1
		else:
			lockToggle = 0
	
	if (hovering || clicked) && !locked:
		if  Input.is_action_pressed(\"left_click\"):
			if toggled < 1:
				if clicked:
					clicked = false
				else:
					clicked = true
				toggled += 1
		else:
			toggled = 0
				
		if clicked:
			self.global_position = self.get_global_mouse_position()
			#fixes spawning a new object while moving this object
#			if !get_node(\"/root/Main\").overButton:
#				get_node(\"/root/Main\").overButton = true
			
		if  Input.is_action_pressed(\"edit\") && !locked:
			if menuToggle < 1:
				#if already open, close
				if self.get_node(\"TurrentMenu\").visible:
					self.get_node(\"TurrentMenu\").visible = false
					self.get_node(\"TurrentMenu\").position = Vector2(30000,30000)
					#set root state to placing
					self.get_node(\"/root/Main\").editorState = \"placing\"
					self.get_node(\"/root/Main/Camera2D/StatesArea/StatesHBox/PlacingButton\")._on_PlacingButton_pressed()
				else:
					self.get_node(\"TurrentMenu\").position = Vector2(50,-100)
					self.get_node(\"TurrentMenu\").visible = true
					self.get_node(\"/root/Main\").editorState = \"editing\"
					self.get_node(\"/root/Main/Camera2D/StatesArea/StatesHBox/EditingButton\")._on_EditingButton_pressed()
				menuToggle += 1
		else:
			menuToggle = 0
		
		if  Input.is_action_pressed(\"right_click\") && !locked:
			self.get_node(\"/root/Main\").set_hovering(false)
			self.free()

func _on_TurretArea_mouse_enter():
	hovering = true

func _on_TurretArea_mouse_exit():
	hovering = false

func _on_health_value_changed( value ):
	health = value

func _on_damage_value_changed( value ):
	damage = value

func _on_firerate_value_changed( value ):
	fireRate = value
	fireRateStatic = value

func _on_fireratedelta_value_changed( value ):
	fireRateDelta = value

func _on_height_value_changed( value ):
	self.set_scale(Vector2(self.get_scale().x, value))"

[sub_resource type="ShaderMaterial" id=2]

render_priority = 0

[sub_resource type="GDScript" id=3]

script/source = "extends Sprite


func _on_ColorPicker_color_changed( color ):
	self.set_modulate(color)"

[sub_resource type="RectangleShape2D" id=4]

custom_solver_bias = 0.0
extents = Vector2( 10, 10 )

[sub_resource type="RectangleShape2D" id=5]

custom_solver_bias = 0.0
extents = Vector2( 44.0177, 48.0308 )

[sub_resource type="RectangleShape2D" id=6]

custom_solver_bias = 0.0
extents = Vector2( 8.23344, 6.1101 )

[sub_resource type="RectangleShape2D" id=7]

custom_solver_bias = 0.0
extents = Vector2( 8.23344, 6.1101 )

[sub_resource type="RectangleShape2D" id=8]

custom_solver_bias = 0.0
extents = Vector2( 24.5003, 11.1971 )

[sub_resource type="GDScript" id=9]

script/source = "extends ColorPickerButton

func _ready():
	set_process(true)
	
func _process(delta):
	self.get_picker().rect_global_position = self.rect_global_position + Vector2(350, -200)
	self.get_popup().rect_global_position = self.rect_global_position + Vector2(350, -200)

func _on_ColorPicker_color_changed( color ):
	self.color = color"

[sub_resource type="RectangleShape2D" id=10]

custom_solver_bias = 0.0
extents = Vector2( 10, 10 )

[node name="TurretRayArea" type="Area2D"]

position = Vector2( 543.337, 286.309 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
collision_layer = 16
collision_mask = 16
audio_bus_override = false
audio_bus_name = "Master"
script = SubResource( 1 )

[node name="Turret" type="Node2D" parent="." index="0"]

editor/display_folded = true
light_mask = 3
material = SubResource( 2 )
position = Vector2( -0.238907, -1.9379 )
script = ExtResource( 1 )

[node name="StaticBody2D" type="StaticBody2D" parent="Turret" index="0"]

input_pickable = false
collision_layer = 8
collision_mask = 0
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="Turret/StaticBody2D" index="0"]

position = Vector2( 1.10815, 0 )
texture = ExtResource( 3 )
script = SubResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Turret/StaticBody2D" index="1"]

position = Vector2( 0.45375, 0.313156 )
scale = Vector2( 2.06324, 3.63881 )
shape = SubResource( 4 )

[node name="Hp" type="TextureProgress" parent="Turret/StaticBody2D" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -48.0
margin_top = 41.0
margin_right = 48.0
margin_bottom = 49.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 2
size_flags_vertical = 2
min_value = 0.0
max_value = 3.0
step = 1.0
page = 0.0
value = 3.0
exp_edit = false
rounded = false
texture_under = ExtResource( 4 )
texture_over = null
texture_progress = ExtResource( 5 )
radial_fill_degrees = 360.0
radial_center_offset = Vector2( 0, 0 )
nine_patch_stretch = false

[node name="Position2D" type="Position2D" parent="Turret" index="1"]

position = Vector2( 0.90361, -35.4541 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="." index="1"]

position = Vector2( -0.0190048, -0.55814 )
shape = SubResource( 5 )

[node name="TurrentMenu" type="Area2D" parent="." index="2"]

visible = false
position = Vector2( 50, -100 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"

[node name="StatsVBox" type="VBoxContainer" parent="TurrentMenu" index="0"]

editor/display_folded = true
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 14.0
margin_top = 49.0
margin_right = 190.0
margin_bottom = 159.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 2
size_flags_vertical = 2
alignment = 0

[node name="HPHBox" type="HBoxContainer" parent="TurrentMenu/StatsVBox" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 108.0
margin_bottom = 24.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 2
size_flags_vertical = 2
alignment = 0

[node name="HPButton" type="MenuButton" parent="TurrentMenu/StatsVBox/HPHBox" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 30.0
margin_bottom = 20.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 2
toggle_mode = false
action_mode = 0
enabled_focus_mode = 0
shortcut = null
group = null
text = "HP"
flat = true
align = 1
items = [  ]

[node name="HPSpinBox" type="SpinBox" parent="TurrentMenu/StatsVBox/HPHBox" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 34.0
margin_right = 108.0
margin_bottom = 24.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 2
size_flags_vertical = 2
min_value = 0.0
max_value = 100000.0
step = 1.0
page = 0.0
value = 1.0
exp_edit = false
rounded = false
editable = true
prefix = ""
suffix = ""

[node name="DamageHBox" type="HBoxContainer" parent="TurrentMenu/StatsVBox" index="1"]

editor/display_folded = true
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 57.0
margin_right = 142.0
margin_bottom = 81.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 2
size_flags_vertical = 2
alignment = 0

[node name="DamageButton" type="MenuButton" parent="TurrentMenu/StatsVBox/DamageHBox" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 64.0
margin_bottom = 20.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 2
toggle_mode = false
action_mode = 0
enabled_focus_mode = 0
shortcut = null
group = null
text = "Damage"
flat = true
align = 1
items = [  ]

[node name="DamageSpinBox" type="SpinBox" parent="TurrentMenu/StatsVBox/DamageHBox" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 68.0
margin_right = 142.0
margin_bottom = 24.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 2
size_flags_vertical = 2
min_value = 0.0
max_value = 100.0
step = 1.0
page = 0.0
value = 1.0
exp_edit = false
rounded = false
editable = true
prefix = ""
suffix = ""

[node name="VisualVBox" type="VBoxContainer" parent="TurrentMenu" index="1"]

editor/display_folded = true
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 214.0
margin_top = 50.0
margin_right = 346.0
margin_bottom = 102.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 2
size_flags_vertical = 2
alignment = 0

[node name="HeightHBox" type="HBoxContainer" parent="TurrentMenu/VisualVBox" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 132.0
margin_bottom = 24.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 2
size_flags_vertical = 2
alignment = 0

[node name="HeightButton" type="MenuButton" parent="TurrentMenu/VisualVBox/HeightHBox" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 54.0
margin_bottom = 20.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 2
toggle_mode = false
action_mode = 0
enabled_focus_mode = 0
shortcut = null
group = null
text = "Height"
flat = true
align = 1
items = [  ]

[node name="HeightSpinBox" type="SpinBox" parent="TurrentMenu/VisualVBox/HeightHBox" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 58.0
margin_right = 132.0
margin_bottom = 24.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 2
size_flags_vertical = 2
min_value = 0.0
max_value = 100000.0
step = 0.01
page = 0.0
value = 1.0
exp_edit = false
rounded = false
editable = true
prefix = ""
suffix = ""

[node name="WidthHBox" type="HBoxContainer" parent="TurrentMenu/VisualVBox" index="1"]

editor/display_folded = true
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 28.0
margin_right = 128.0
margin_bottom = 52.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 2
size_flags_vertical = 2
alignment = 0

[node name="WidthButton" type="MenuButton" parent="TurrentMenu/VisualVBox/WidthHBox" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 50.0
margin_bottom = 20.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 2
toggle_mode = false
action_mode = 0
enabled_focus_mode = 0
shortcut = null
group = null
text = "Width"
flat = true
align = 1
items = [  ]

[node name="WidthSpinBox" type="SpinBox" parent="TurrentMenu/VisualVBox/WidthHBox" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 54.0
margin_right = 128.0
margin_bottom = 24.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 2
size_flags_vertical = 2
min_value = 0.0
max_value = 100000.0
step = 0.01
page = 0.0
value = 1.0
exp_edit = false
rounded = false
editable = true
prefix = ""
suffix = ""

[node name="ProjectileVBox" type="VBoxContainer" parent="TurrentMenu" index="2"]

editor/display_folded = true
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 367.0
margin_top = 53.0
margin_right = 446.0
margin_bottom = 93.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 2
size_flags_vertical = 2
alignment = 0

[node name="HeightHBox" type="HBoxContainer" parent="TurrentMenu/ProjectileVBox" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 120.0
margin_bottom = 24.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 2
size_flags_vertical = 2
alignment = 0

[node name="HeightLabel" type="Label" parent="TurrentMenu/ProjectileVBox/HeightHBox" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 42.0
margin_bottom = 14.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 2
size_flags_vertical = 0
text = "Height"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="HeightSpinBox" type="SpinBox" parent="TurrentMenu/ProjectileVBox/HeightHBox" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 46.0
margin_right = 120.0
margin_bottom = 24.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 2
size_flags_vertical = 2
min_value = 0.0
max_value = 100.0
step = 0.1
page = 0.0
value = 1.0
exp_edit = false
rounded = false
editable = true
prefix = ""
suffix = ""

[node name="WidthHBox" type="HBoxContainer" parent="TurrentMenu/ProjectileVBox" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 28.0
margin_right = 116.0
margin_bottom = 52.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 2
size_flags_vertical = 2
alignment = 0

[node name="WidthLabel" type="Label" parent="TurrentMenu/ProjectileVBox/WidthHBox" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 38.0
margin_bottom = 14.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 2
size_flags_vertical = 0
text = "Width"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="WidthSpinBox" type="SpinBox" parent="TurrentMenu/ProjectileVBox/WidthHBox" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 42.0
margin_right = 116.0
margin_bottom = 24.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 2
size_flags_vertical = 2
min_value = 0.0
max_value = 100.0
step = 0.1
page = 0.0
value = 1.0
exp_edit = false
rounded = false
editable = true
prefix = ""
suffix = ""

[node name="Laser2" type="RigidBody2D" parent="TurrentMenu/ProjectileVBox" index="2"]

position = Vector2( 3500.05, 502.701 )
z_as_relative = false
input_pickable = false
collision_layer = 1
collision_mask = 1
mode = 0
mass = 0.000102041
friction = 1.0
bounce = 0.0
gravity_scale = 0.0
custom_integrator = false
continuous_cd = 2
contacts_reported = 1
contact_monitor = true
sleeping = false
can_sleep = true
linear_velocity = Vector2( 0, 0 )
linear_damp = -1.0
angular_velocity = 0.0
angular_damp = -1.0
script = ExtResource( 6 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="TurrentMenu/ProjectileVBox/Laser2" index="0"]

position = Vector2( -0.0913086, -0.0752258 )
scale = Vector2( 0.191007, 0.6467 )
shape = SubResource( 6 )

[node name="Sprite" type="Sprite" parent="TurrentMenu/ProjectileVBox/Laser2" index="1"]

position = Vector2( -0.000488281, 0 )
scale = Vector2( 1, 0.999997 )
texture = ExtResource( 7 )

[node name="Laser" type="Node2D" parent="TurrentMenu/ProjectileVBox" index="3"]

position = Vector2( 176.534, 43.3726 )
script = ExtResource( 8 )

[node name="KinematicBody2D" type="KinematicBody2D" parent="TurrentMenu/ProjectileVBox/Laser" index="0"]

position = Vector2( -0.129724, 0.0108337 )
scale = Vector2( 0.0670746, 0.12194 )
input_pickable = false
collision_layer = 0
collision_mask = 16
collision/safe_margin = 0.08

[node name="Sprite" type="Sprite" parent="TurrentMenu/ProjectileVBox/Laser/KinematicBody2D" index="0"]

position = Vector2( -0.300781, 2.36963 )
scale = Vector2( 14.9088, 8.20073 )
texture = ExtResource( 9 )

[node name="Sprite2" type="Sprite" parent="TurrentMenu/ProjectileVBox/Laser/KinematicBody2D/Sprite" index="0"]

modulate = Color( 1, 1, 1, 0.734824 )
position = Vector2( 0, -0.0195313 )
scale = Vector2( 1.2, 1.1 )
z_index = -4
z_as_relative = false
texture = ExtResource( 9 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="TurrentMenu/ProjectileVBox/Laser/KinematicBody2D" index="1"]

position = Vector2( -0.322266, 2.90283 )
scale = Vector2( 2.84768, 5.30343 )
shape = SubResource( 7 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="TurrentMenu" index="3"]

position = Vector2( 266.45, 110.779 )
scale = Vector2( 10.3845, 6.33229 )
shape = SubResource( 8 )

[node name="ColorPicker" type="ColorPickerButton" parent="TurrentMenu" index="4"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 216.0
margin_top = 121.0
margin_right = 344.0
margin_bottom = 141.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 2
size_flags_vertical = 2
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
flat = false
align = 1
color = Color( 1, 1, 1, 1 )
edit_alpha = false
script = SubResource( 9 )

[node name="Position2DArea2D" type="Area2D" parent="." index="3"]

position = Vector2( 0.9375, -141.693 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"
script = ExtResource( 10 )

[node name="Position2D" type="Position2D" parent="Position2DArea2D" index="0"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Position2DArea2D" index="1"]

shape = SubResource( 10 )

[connection signal="mouse_entered" from="." to="." method="_on_TurretArea_mouse_enter"]

[connection signal="mouse_exited" from="." to="." method="_on_TurretArea_mouse_exit"]

[connection signal="value_changed" from="TurrentMenu/StatsVBox/HPHBox/HPSpinBox" to="." method="_on_health_value_changed"]

[connection signal="value_changed" from="TurrentMenu/StatsVBox/DamageHBox/DamageSpinBox" to="." method="_on_damage_value_changed"]

[connection signal="value_changed" from="TurrentMenu/VisualVBox/HeightHBox/HeightSpinBox" to="Turret" method="_on_height_value_changed"]

[connection signal="value_changed" from="TurrentMenu/VisualVBox/WidthHBox/WidthSpinBox" to="Turret" method="_on_width_value_changed"]

[connection signal="value_changed" from="TurrentMenu/ProjectileVBox/HeightHBox/HeightSpinBox" to="TurrentMenu/ProjectileVBox/Laser" method="_on_ProjHeightSpinBox_value_changed"]

[connection signal="value_changed" from="TurrentMenu/ProjectileVBox/HeightHBox/HeightSpinBox" to="Turret" method="_on_ProjHeightSpinBox_value_changed"]

[connection signal="value_changed" from="TurrentMenu/ProjectileVBox/WidthHBox/WidthSpinBox" to="TurrentMenu/ProjectileVBox/Laser" method="_on_ProjWidthSpinBox_value_changed"]

[connection signal="value_changed" from="TurrentMenu/ProjectileVBox/WidthHBox/WidthSpinBox" to="Turret" method="_on_ProjWidthSpinBox_value_changed"]

[connection signal="color_changed" from="TurrentMenu/ColorPicker" to="Turret/StaticBody2D/Sprite" method="_on_ColorPicker_color_changed"]


